--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
+  
   <title>GitProfile</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
